# Constraint-Based-Timetable-Scheduler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
data/: constraints.csv  courses.csv  instructors.csv  rooms.csv  student_groups.csv  timeslots.csv
docs/: conflict_graph.md
include/: ConflictGraph.h  CsvReader.h  Domain.h  OutputWriter.h  QualityScorer.h  Schedule.h  Scheduler.h  Validator.h
src/: ConflictGraph.cpp  CsvReader.cpp  Domain.cpp  OutputWriter.cpp  QualityScorer.cpp  Schedule.cpp  Scheduler.cpp  Validator.cpp  main.cpp
tests/: test_main.cpp
